--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
         <p class="en hidden">PhD in Geography | Researcher | University Professor</p>
         <div class="contact-info">
             <span>📍 Medellín, Colombia</span>
-            <span>🪪 C.C. 10.004.446 de Pereira</span>
+            <span>🪪 hcardonat@gmail.com </span>
+             <span> Móvil: +57 311 6184376 </span>
         </div>
     </header>
 
